--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_pink">#EC2761</color>
-    <color name="primaryVariant_pink">#ff77a9</color>
+    <color name="primaryVariant_pink">#951B48</color>
     <color name="secondary_pink">#efafc0</color>
 </resources>
