--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <import type="com.example.rockaroundapp.viewmodel.LoginViewModel.UserType" />
+        <variable
+            name="loginViewModel"
+            type="com.example.rockaroundapp.viewmodel.LoginViewModel"/>
+    </data>
+        
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -70,6 +78,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="@={loginViewModel.email}"
                         android:hint="Email" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,6 +98,7 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:text="@={loginViewModel.password}"
                         android:hint="Password" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,6 +110,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="20dp"
                     android:text="Login"
+                    android:onClick="@{()-> loginViewModel.onLoginClick()}"
                     android:layout_marginTop="15dp"
                     app:layout_constraintBottom_toTopOf="@+id/or_txt"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -174,17 +185,20 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="8dp"
+                        android:onClick="@{()-> loginViewModel.setButton(UserType.SOLO)}"
                         android:text="Solo Artist" />
 
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:onClick="@{()-> loginViewModel.setButton(UserType.GROUP)}"
                         android:text="Group Artist" />
 
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
+                        android:onClick="@{()-> loginViewModel.setButton(UserType.VENUE)}"
                         android:text="Venue Owner" />
                 </RadioGroup>
 
