--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,8 +4,18 @@
     <item
         android:id="@+id/discover"
         android:title="Discover"
-        app:showAsAction="always"
         android:orderInCategory="1"
-        />
+        android:icon="@drawable/ic_baseline_search_24" />
 
+    <item
+        android:id="@+id/map"
+        android:title="Map"
+        android:orderInCategory="2"
+        android:icon="@drawable/ic_baseline_location_on_24"/>
+
+    <item
+        android:id="@+id/profile"
+        android:title="Profile"
+        android:orderInCategory="2"
+        android:icon="@drawable/ic_baseline_account_circle_24"/>
 </menu>
