--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         tools:context=".view.RegisterFragment">
 
-        <androidx.appcompat.widget.Toolbar
+        <!--<androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,14 +23,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
+            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />-->
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="148dp"
             android:layout_marginEnd="165dp"
             android:layout_marginBottom="8dp"
             android:text="Register"
@@ -38,14 +38,14 @@
             app:layout_constraintBottom_toTopOf="@+id/register_card"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/register_card"
             android:layout_width="match_parent"
             android:layout_height="580dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="25dp"
             android:layout_marginBottom="35dp"
             app:cardCornerRadius="15dp"
@@ -53,7 +53,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar">
+            app:layout_constraintTop_toBottomOf="@+id/textView">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -77,10 +77,10 @@
                         android:id="@+id/txtFirstname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        app:boxBackgroundMode="none"
                         android:hint="Firstname"
                         android:inputType="textCapWords"
-                        android:text="@={registerViewModel.firstname}" />
+                        android:text="@={registerViewModel.firstname}"
+                        app:boxBackgroundMode="none" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -195,11 +195,11 @@
                     android:layout_marginBottom="34dp"
                     android:background="@drawable/pill_button"
                     android:backgroundTint="@color/primary_pink"
+                    android:onClick="@{()-> registerViewModel.onRegisterClick()}"
                     android:text="Register"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:onClick="@{()-> registerViewModel.onRegisterClick()}"
                     app:layout_constraintTop_toBottomOf="@id/user_type_radio_group" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
