--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,7 +12,9 @@
         tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
+            app:destination="@id/registerFragment"
+            app:popEnterAnim="@transition/enter_left_to_right"
+            app:popExitAnim="@transition/exit_right_to_left"/>
         <action
             android:id="@+id/action_loginFragment_to_exploreFragment"
             app:destination="@id/exploreFragment"/>
