Finish setting up Image Upload Finish Solo Setup fully

--- a/app/src/main/res/layout/fragment_solo_setup.xml
+++ b/app/src/main/res/layout/fragment_solo_setup.xml
@@ -34,6 +34,7 @@
                 android:layout_height="150dp"
                 android:layout_marginTop="30dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                android:src="@mipmap/ic_launcher_round"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_image_textview" />
 
@@ -63,6 +64,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:text="@={soloSetupViewModel.artist.stageName}"
                     android:hint="Stage name" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -78,6 +80,7 @@
                 android:layout_marginTop="20dp"
                 android:inputType="textMultiLine"
                 android:gravity="start|top"
+                android:text="@={soloSetupViewModel.artist.bio}"
                 android:background="@drawable/bio_box_outline"
                 android:hint="Tell us about yourself"/>
 
@@ -109,13 +112,36 @@
                 app:layout_constraintStart_toEndOf="@+id/genres_textInputLayout"
                 app:layout_constraintTop_toTopOf="@id/genres_textInputLayout">
             </com.google.android.material.button.MaterialButton>
+
             <GridView
                 android:id="@+id/genres_grid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:numColumns="3"/>
+                android:layout_marginEnd="20dp"
+                android:numColumns="3"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/add_genre_button"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginStart="20dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:hint="Price" />
+            </com.google.android.material.textfield.TextInputLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
