--- a/app/src/main/res/layout/fragment_solo_setup.xml
+++ b/app/src/main/res/layout/fragment_solo_setup.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="soloSetupViewModel"
             type="com.example.rockaroundapp.viewmodel.SoloSetupViewModel" />
@@ -33,8 +34,8 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="30dp"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:src="@mipmap/ic_launcher_round"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/profile_image_textview" />
 
@@ -64,25 +65,26 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@={soloSetupViewModel.artist.stageName}}"
-                    android:hint="Stage name" />
+                    android:hint="Stage name"
+                    android:inputType="textCapSentences"
+                    android:text="@={soloSetupViewModel.stageName}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <EditText
                 android:id="@+id/bio_editText"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                app:layout_constraintTop_toBottomOf="@id/stage_name_textInputLayout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
-                android:inputType="textMultiLine"
-                android:gravity="start|top"
-                android:text="@={soloSetupViewModel.artist.bio}"
+                android:layout_marginEnd="20dp"
                 android:background="@drawable/bio_box_outline"
-                android:hint="Tell us about yourself"/>
+                android:gravity="start|top"
+                android:hint="Tell us about yourself"
+                android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
+                android:text="@={soloSetupViewModel.bio}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/stage_name_textInputLayout" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/genres_textInputLayout"
@@ -91,11 +93,15 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="50dp"
+                app:layout_constraintBottom_toTopOf="@id/contact_text"
+                android:clickable="false"
                 app:layout_constraintEnd_toStartOf="@+id/add_genre_button"
                 app:layout_constraintStart_toStartOf="parent"
+                android:focusable="false"
                 app:layout_constraintTop_toBottomOf="@id/bio_editText">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:clickable="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Genres" />
@@ -106,57 +112,73 @@
                 android:layout_width="wrap_content"
                 android:layout_height="60dp"
                 android:layout_marginEnd="20dp"
+                android:background="@drawable/pill_button"
                 android:hint="Add Genre"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:background="@drawable/pill_button"
                 app:layout_constraintStart_toEndOf="@+id/genres_textInputLayout"
-                app:layout_constraintTop_toTopOf="@id/genres_textInputLayout">
-            </com.google.android.material.button.MaterialButton>
+                app:layout_constraintTop_toTopOf="@id/genres_textInputLayout" />
 
-            <GridView
-                android:id="@+id/genres_grid"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/contact_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:numColumns="3"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout" />
+                app:layout_constraintBottom_toTopOf="@id/price_text"
+                app:layout_constraintEnd_toEndOf="@id/add_genre_button"
+                app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:text="@={soloSetupViewModel.contactNumber}"
+                    android:hint="Contact Number" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/price_text"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/add_genre_button"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="50dp"
-                android:layout_marginStart="20dp">
+                app:layout_constraintEnd_toStartOf="@id/add_genre_button"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/contact_text">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
-                    android:text="@={soloSetupViewModel.artist.price}"
                     android:layout_height="wrap_content"
+                    android:hint="Price"
                     android:inputType="number"
-                    android:hint="Price" />
+                    android:text="@={soloSetupViewModel.price}" />
             </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/gridView_item"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Save"
-                app:layout_constraintTop_toBottomOf="@id/price_text"
-                android:layout_marginStart="20dp"
-                android:onClick="@{()-> soloSetupViewModel.onSaveClicked()}"
-                android:layout_marginEnd="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/pill_button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/save_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/pill_button"
+                android:onClick="@{()-> soloSetupViewModel.onSaveClicked()}"
+                android:text="Save"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="10dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/price_text" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
