--- a/app/src/main/res/layout/fragment_group_setup.xml
+++ b/app/src/main/res/layout/fragment_group_setup.xml
@@ -4,20 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
-            name="soloSetupViewModel"
-            type="com.example.rockaroundapp.viewmodel.SoloSetupViewModel" />
+            name="groupSetupViewModel"
+            type="com.example.rockaroundapp.viewmodel.GroupSetupViewModel" />
     </data>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:context=".view.SoloSetupFragment">
+            android:layout_height="match_parent"
+            tools:context=".view.GroupSetupFragment">
 
             <TextView
                 android:id="@+id/profile_image_textview"
@@ -66,9 +65,9 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Stage name"
+                    android:hint="Group name"
                     android:inputType="textCapSentences"
-                    android:text="@={soloSetupViewModel.stageName}" />
+                    android:text="@={groupSetupViewModel.groupName}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <EditText
@@ -80,27 +79,25 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/bio_box_outline"
                 android:gravity="start|top"
-                android:hint="Tell us about yourself"
+                android:hint="Tell us about the group"
                 android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
-                android:text="@={soloSetupViewModel.bio}"
+                android:text="@={groupSetupViewModel.bio}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/add_genre_button"
                 app:layout_constraintTop_toBottomOf="@id/stage_name_textInputLayout" />
 
             <TextView
                 android:id="@+id/genres_textInputLayout"
                 android:layout_width="180dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-
+                android:layout_height="60dp"
                 android:layout_marginEnd="31dp"
                 android:clickable="false"
                 android:focusable="false"
-                app:layout_constraintBottom_toTopOf="@id/contact_text"
+                app:layout_constraintBottom_toBottomOf="@id/add_genre_button"
                 app:layout_constraintEnd_toStartOf="@+id/add_genre_button"
                 app:layout_constraintStart_toStartOf="@id/bio_editText"
-                app:layout_constraintTop_toBottomOf="@id/bio_editText" />
-
+                app:layout_constraintTop_toTopOf="@id/add_genre_button" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/add_genre_button"
@@ -108,29 +105,64 @@
                 android:layout_height="60dp"
                 android:layout_marginStart="31dp"
                 android:layout_marginEnd="20dp"
+                app:layout_constraintTop_toBottomOf="@id/bio_editText"
                 android:background="@drawable/pill_button"
                 android:hint="Add Genre"
+                app:layout_constraintBottom_toTopOf="@id/no_of_members_text"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/genres_textInputLayout"
-                app:layout_constraintTop_toTopOf="@id/genres_textInputLayout" />
+                app:layout_constraintStart_toEndOf="@+id/genres_textInputLayout" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/no_of_members_text"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
+                app:layout_constraintEnd_toEndOf="@id/genres_textInputLayout"
+                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="No. of members"
+                    android:inputType="number"
+                    android:text="@={groupSetupViewModel.noOfMembers}" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/contact_text"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                app:layout_constraintBottom_toTopOf="@id/price_text"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
-                app:layout_constraintTop_toBottomOf="@id/genres_textInputLayout">
+                app:layout_constraintTop_toBottomOf="@id/no_of_members_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Contact Number"
                     android:inputType="number"
-                    android:text="@={soloSetupViewModel.contactNumber}" />
+                    android:text="@={groupSetupViewModel.contactNumber}" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/contact_text"
+                app:layout_constraintStart_toStartOf="@id/contact_text"
+                app:layout_constraintEnd_toEndOf="@id/no_of_members_text"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:text="@={groupSetupViewModel"
+                android:layout_marginTop="20dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Price" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -138,9 +170,8 @@
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
                 app:layout_constraintEnd_toEndOf="@id/genres_textInputLayout"
-
-                app:layout_constraintStart_toStartOf="@id/contact_text"
                 app:layout_constraintTop_toBottomOf="@id/contact_text">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -148,15 +179,8 @@
                     android:layout_height="wrap_content"
                     android:hint="Price"
                     android:inputType="number"
-                    android:text="@={soloSetupViewModel.price}" />
+                    android:text="@={groupSetupViewModel.price}" />
             </com.google.android.material.textfield.TextInputLayout>
-            <TextView
-                android:id="@+id/gridView_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/save_button"
@@ -167,12 +191,13 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/pill_button"
-                android:onClick="@{()-> soloSetupViewModel.onSaveClicked()}"
+                android:onClick="@{()-> groupSetupViewModel.onSaveClicked()}"
                 android:text="Save"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/price_text" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
