--- a/app/src/main/res/layout/fragment_group_setup.xml
+++ b/app/src/main/res/layout/fragment_group_setup.xml
@@ -133,9 +133,11 @@
                 android:id="@+id/contact_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/genres_textInputLayout"
                 app:layout_constraintTop_toBottomOf="@id/no_of_members_text">
@@ -149,15 +151,16 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout"
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/contact_text"
-                app:layout_constraintStart_toStartOf="@id/contact_text"
-                app:layout_constraintEnd_toEndOf="@id/no_of_members_text"
                 android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:text="@={groupSetupViewModel"
-                android:layout_marginTop="20dp">
+                app:layout_constraintEnd_toEndOf="@id/no_of_members_text"
+                app:layout_constraintStart_toStartOf="@id/contact_text"
+                app:layout_constraintTop_toBottomOf="@id/contact_text">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
