--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -35,7 +35,7 @@
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/login_card"
             android:layout_width="match_parent"
-            android:layout_height="550dp"
+            android:layout_height="500dp"
             android:layout_marginStart="25dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="25dp"
@@ -101,8 +101,9 @@
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@={loginViewModel.password}"
-                        android:hint="Password" />
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:text="@={loginViewModel.password}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
@@ -168,12 +169,12 @@
                     android:layout_marginEnd="217dp"
                     android:text="Register"
                     android:textSize="30sp"
-                    app:layout_constraintBottom_toTopOf="@+id/user_type_radio_group"
+                    app:layout_constraintBottom_toTopOf="@+id/register_button"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/or_txt" />
 
-                <RadioGroup
+               <!-- <RadioGroup
                     android:id="@+id/user_type_radio_group"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -203,20 +204,20 @@
                         android:layout_marginStart="8dp"
                         android:onClick="@{()-> loginViewModel.setUserType(UserType.VENUE)}"
                         android:text="Venue Owner" />
-                </RadioGroup>
+                </RadioGroup>-->
 
                 <Button
                     android:id="@+id/register_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="15dp"
                     android:background="@drawable/pill_button_outline"
                     android:text="Register"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/user_type_radio_group" />
+                    app:layout_constraintTop_toBottomOf="@id/register_txt" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
